crates/tui/src/view/snapshots/tui__view__steering_queue__tests__steering_rows_indented_with_heading_and_footer.snap
---
source: crates/tui/src/view/steering_queue_tests.rs
expression: "screen(&queued(60, 12), 60, 12)"
---

                                                      ▄▄▄▄▄
                                                       hi ▐
                                                      ▀▀▀▀▀
                                                      00:00
  • Steering, joins the turn at the next step
  ↳ use the parser  ✕
  ↳ and test it
  ⌥↑ edit · ⌥↓ next · ⌥x drop · click a row to edit, ✕ to dr
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ >
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
