crates/tui/src/view/snapshots/tui__view__steering_queue__tests__steering_rows_with_stripes.snap
---
source: crates/tui/src/view/steering_queue_tests.rs
expression: "screen(&queued(60, 12), 60, 12)"
---



                                                      ▄▄▄▄▄
                                                       hi ▐
                                                      ▀▀▀▀▀
                                                      00:00
▌ ↳ use the parser                                         ✕
▌ ↳ and test it
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
>
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
